# custom_gpu_op_tutorial

./: CMakeLists.txt  README.md  create_model.py  custom_add_mul.cl  custom_add_mul.xml  main.cpp  model.xml  test_custom_op.py
